[package]
name = "cortexkit-cache-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Harness-neutral prompt-cache-stability core: the frozen-set per-pass state machine (boundary-presence anchor, render-on-bust / replay-verbatim-on-defer) shared by Magic Context and the llm-runner author harness."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
