[package]
name = "cortexkit-store-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Dependency-light storage descriptor types: the wire/config contract for CortexKit module storage."

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
