[package]
name = "cortexkit-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend mechanics (open, versioned migrations, single-writer lease) for CortexKit module storage."

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
cortexkit-store-types = { version = "0.1.0", path = "../cortexkit-store-types" }
cortexkit-lease = { version = "0.1.0", path = "../cortexkit-lease" }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
